<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/add_new_contact"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:autofillHints="Contact name"
            android:hint="@string/enter_contact_name"
            android:inputType="text"
            android:paddingHorizontal="5dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:autofillHints="Enter last name"
            android:hint="@string/enter_contact_last_name"
            android:inputType="text"
            android:paddingHorizontal="5dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:autofillHints="Contact email"
            android:hint="@string/enter_contact_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="5dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_pnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:autofillHints="Phone number"
            android:hint="@string/enter_contact_phone_number"
            android:inputType="phone"
            android:paddingHorizontal="5dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:autofillHints="Enter address"
            android:hint="@string/enter_contact_address"
            android:inputType="text"
            android:paddingHorizontal="5dp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_add_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_contact" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>